feat: Implement job search and homepage features
- Added IFindJobService interface and FindJobServiceImpl implementation for job searching functionality.
- Created HomepageController and IHomepageService for fetching homepage data.
- Developed DTOs for homepage response including FeaturedJobResponse, FeatureCompanyResponse, and StatsResponse.
- Implemented login functionality with LoginController and ILoginService.
- Added SignupController and ISignupService for user registration.
- Introduced custom exceptions for better error handling.
- Created ApiResponse wrapper for standardizing API responses.